Make description HTML compatible

--- a/app/src/main/res/layout/fragment_coin_detail.xml
+++ b/app/src/main/res/layout/fragment_coin_detail.xml
@@ -60,9 +60,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/text_margin"
                     android:layout_marginEnd="@dimen/text_margin"
+                    android:layout_marginBottom="@dimen/text_margin"
                     android:text='@{coin.marketData.currentPrice.usd != null ? ("$ " + String.format("%.4f", coin.marketData.currentPrice.usd)) : ""}'
                     android:textAppearance="?attr/textAppearanceHeadline4"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/text_coin_detail_name"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/guideline"
                     tools:text="$58.000" />
@@ -71,7 +73,7 @@
                     android:id="@+id/text_coin_detail_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/text_margin"
+                    android:layout_marginStart="@dimen/text_margin_big"
                     android:layout_marginEnd="@dimen/text_margin"
                     android:layout_marginBottom="@dimen/text_margin"
                     android:text="@{coin.name}"
@@ -86,7 +88,7 @@
                     android:id="@+id/text_symbol"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/text_margin"
+                    android:layout_marginStart="@dimen/text_margin_big"
                     android:layout_marginEnd="@dimen/text_margin"
                     android:layout_marginBottom="@dimen/text_margin"
                     android:text="@{coin.symbol}"
@@ -101,7 +103,7 @@
                     android:id="@+id/text_hashing"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/text_margin"
+                    android:layout_marginStart="@dimen/text_margin_big"
                     android:layout_marginEnd="@dimen/text_margin"
                     android:layout_marginBottom="@dimen/text_margin_big"
                     android:text='@{coin.hashing ?? ""}'
@@ -145,7 +147,6 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/text_margin"
                     android:layout_marginBottom="@dimen/description_margin"
-                    android:text="@{coin.description.en}"
                     android:textAppearance="?attr/textAppearanceHeadline6"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
